--- a/.github/workflows/rpmbuild-on-release-created.yaml
+++ b/.github/workflows/rpmbuild-on-release-created.yaml
@@ -15,3 +15,4 @@ jobs:
     - uses: redwain/upload-release-asset@master
       with:
         files: 'rpmbuild/SRPMS/*.rpm;rpmbuild/RPMS/*.rpm'
+        github_token: ${{ secrets.GITHUB_TOKEN }}
